footer z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,69 @@
-
 html {
-  height:100%;
+  height: 100%;
 }
 body {
-  height:100%;
+  height: 100%;
   margin: 0px;
-  overflow:hidden; /* disable scrollbars */
+  overflow: hidden; /* disable scrollbars */
   font-size: 10pt;
 }
 /* fix for scroll bars on webkit & >=Mac OS X Lion */
 ::-webkit-scrollbar {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 0.75em;
 }
 ::-webkit-scrollbar-thumb {
-    background-color:  rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 /* Row no Gutter */
-.alt-grid [class*="col-"] {padding-left:0;padding-right:0}
-.alt-grid .row {margin-left:0;margin-right:0}
+.alt-grid [class*="col-"] {
+  padding-left: 0;
+  padding-right: 0;
+}
+.alt-grid .row {
+  margin-left: 0;
+  margin-right: 0;
+}
 
 /* container adjusted */
-.alt-grid .container {width:100%;max-width:none;padding:0;}
+.alt-grid .container {
+  width: 100%;
+  max-width: none;
+  padding: 0;
+}
 
 /* Remove margins and padding from the list, and add a black background color */
 ul.topnav {
-    height: 40px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: rgba(250, 250, 250, 0.5);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+  height: 40px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: rgba(250, 250, 250, 0.5);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* Float the list items side by side */
-ul.topnav li {float: left;}
+ul.topnav li {
+  float: left;
+}
 
 /* Style the links inside the list items */
 ul.topnav li a {
-    display: inline-block;
-    color: #000;
-    text-align: center;
-    padding: 8px 15px;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 17px;
+  display: inline-block;
+  color: #000;
+  text-align: center;
+  padding: 8px 15px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 17px;
 }
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {display: none;}
-
+ul.topnav li.icon {
+  display: none;
+}
 
 a:link {
   color: black;
@@ -106,17 +118,17 @@ a:visited {
   font-weight: 300;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
 footer {
-    position: fixed;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.8);
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.8);
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 ul.info-baixo li {
@@ -145,4 +157,9 @@ ul.info-baixo li {
   text-align: right;
   margin-right: 15px;
   margin-top: 15px;
+}
+
+.navbar-fixed-bottom {
+  position: fixed;
+  z-index: 100;
 }
